# ut_arm_ros

./: LICENSE  opti.md  readme.md  readme.txt
arm_controller/: CMakeLists.txt  package.xml  readme.md
arm_controller/config/: ompl.yaml
arm_controller/launch/: utarm_api_server.launch  utarm_mvservo_trajectory.launch  utarm_status_transmit.launch  utra_server.launch
arm_controller/src/: utarm_api_server.cpp  utarm_mvservo_trajectory.cpp  utarm_report_status10hz.cpp  utarm_status_transmit.cpp  utra_server.cpp
arm_description/: CMakeLists.txt  package.xml
arm_description/cfg/: view_robot.rviz
arm_description/ikfast/: ik_fast_opti6_800_robot.cpp  ik_fast_opti7_800_robot.cpp  ik_fast_utra6_1000_robot.cpp  ik_fast_utra6_1500_robot  ik_fast_utra6_1500_robot.cpp  ik_fast_utra6_550_robot.cpp  ik_fast_utra6_850_robot.cpp  ikfast_test_fk.cpp  ikfast_test_ik.cpp  opti6_800_robot.urdf  opti7_800_robot.urdf  utra6_1000_robot.urdf  utra6_1500_robot.urdf  utra6_550_robot.urdf  utra6_850_robot.urdf
arm_description/launch/: opti6_800_upload.launch  opti6_800_view.launch  opti7_800_upload.launch  opti7_800_view.launch  utra6_1000_upload.launch  utra6_1000_view.launch  utra6_1500_upload.launch  utra6_1500_view.launch  utra6_550_upload.launch  utra6_550_view.launch  utra6_850_upload.launch  utra6_850_view.launch
arm_description/urdf/: opti6_800.urdf.xacro  opti6_800_common.gazebo.xacro  opti6_800_robot.urdf.xacro  opti6_800_robot_gripper.urdf.xacro  opti6_800_robot_vacuum_gripper.urdf.xacro  opti7_800.urdf.xacro  opti7_800_robot.urdf.xacro  opti7_800_robot_gripper.urdf.xacro  opti7_800_robot_vacuum_gripper.urdf.xacro  transmission.xacro  utra6_1000.urdf.xacro  utra6_1000_robot.urdf.xacro  utra6_1000_robot_gripper.urdf.xacro  utra6_1000_robot_vacuum_gripper.urdf.xacro  utra6_1500.urdf.xacro  utra6_1500_robot.urdf.xacro  utra6_1500_robot_gripper.urdf.xacro  utra6_1500_robot_vacuum_gripper.urdf.xacro  utra6_550.urdf.xacro  utra6_550_robot.urdf.xacro  utra6_550_robot_gripper.urdf.xacro  utra6_550_robot_vacuum_gripper.urdf.xacro  utra6_850.urdf.xacro  utra6_850_robot.urdf.xacro  utra6_850_robot_gripper.urdf.xacro  utra6_850_robot_vacuum_gripper.urdf.xacro
utra4_450_gazebo/: CMakeLists.txt  package.xml
utra4_450_gazebo/config/: utra4_450_gazebo_joint_states.yaml  utra4_450_pid_control.yaml  utra4_450_trajectory_control.yaml
utra4_450_gazebo/launch/: bringup_moveit.launch  gazebo_states.launch  gazebo_world.launch  trajectory_controller.launch
utra6_1000_moveit_gripper_config/: .setup_assistant  CMakeLists.txt  package.xml
utra6_1000_moveit_gripper_config/config/: joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  utra6_1000.srdf
utra6_1000_moveit_gripper_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  ompl_s_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  run_with_utra.launch  run_with_utra6_1000.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  utra6_1000_moveit_controller_manager.launch.xml  warehouse.launch
utra_api/: CMakeLists.txt  package.xml
utra_controller/: CMakeLists.txt  package.xml  readme.md
utra_controller/launch/: joint_publisher_1000.launch  joint_publisher_450.launch  joint_publisher_550.launch  joint_publisher_6.launch  joint_publisher_7.launch  joint_publisher_850.launch  joint_trajectory_1000.launch  joint_trajectory_450.launch  joint_trajectory_550.launch  joint_trajectory_6.launch  joint_trajectory_7.launch  joint_trajectory_850.launch  utra_server.launch
utra_controller/src/: joint_publisher_1000.cpp  joint_publisher_450.cpp  joint_publisher_550.cpp  joint_publisher_6.cpp  joint_publisher_7.cpp  joint_publisher_850.cpp  joint_trajectory_1000.cpp  joint_trajectory_450.cpp  joint_trajectory_550.cpp  joint_trajectory_6.cpp  joint_trajectory_7.cpp  joint_trajectory_850.cpp  utra_publish.cpp  utra_server.cpp
utra_description/: CMakeLists.txt  package.xml
utra_description/ikfast/: build_ikfast.sh  create_ikfast_6axis.sh  create_ikfast_7axis.sh  ik_fast_opti6_800_robot  ik_fast_opti7_800_robot  ik_fast_utra6_1000_robot  ik_fast_utra6_550_robot  ik_fast_utra6_550_robot.cpp  ik_fast_utra6_850_robot  ikfast_test_fk.cpp  opti6_800_robot.urdf  opti7_800_robot.urdf  readme.md  utra6_1000_robot.urdf  utra6_1500_robot.urdf  utra6_550_robot.urdf  utra6_850_robot.urdf
utra_description/launch/: opti6_800_upload.launch  opti6_800_view.launch  opti6_upload.launch  opti6_view.launch  opti7_800_upload.launch  opti7_800_view.launch  utra4_450_upload.launch  utra4_450_view.launch  utra6_1000_upload.launch  utra6_1000_view.launch  utra6_1500_upload.launch  utra6_1500_view.launch  utra6_550_upload.launch  utra6_550_view.launch  utra6_850_upload.launch  utra6_850_view.launch
utra_description/urdf/: opti6.urdf.xacro  opti6_800.urdf.xacro  opti6_800_common.gazebo.xacro  opti6_800_robot.urdf.xacro  opti6_800_robot_gripper.urdf.xacro  opti6_800_robot_vacuum_gripper.urdf.xacro  opti6_robot.urdf.xacro  opti6_robot_gripper.urdf.xacro  opti6_robot_vacuum_gripper.urdf.xacro  opti7_800.urdf.xacro  opti7_800_common.gazebo.xacro  opti7_800_robot.urdf.xacro  opti7_800_robot_gripper.urdf.xacro  opti7_800_robot_vacuum_gripper.urdf.xacro  utra4_450.urdf.xacro  utra4_450_common.gazebo.xacro  utra4_450_robot.urdf.xacro  utra6_1000.urdf.xacro  utra6_1000_common.gazebo.xacro  utra6_1000_robot.urdf.xacro  utra6_1000_robot_gripper.urdf.xacro  utra6_1000_robot_vacuum_gripper.urdf.xacro  utra6_1500.urdf.xacro  utra6_1500_common.gazebo.xacro  utra6_1500_robot.urdf.xacro  utra6_1500_robot_gripper.urdf.xacro  utra6_1500_robot_vacuum_gripper.urdf.xacro  utra6_550.urdf.xacro  utra6_550_common.gazebo.xacro  (+8 more)
utra_gripper/: CMakeLists.txt  package.xml
utra_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
(+599 files in other folders)
