<?xml version="1.0"?>
<package format="2">
  <name>arm_description</name>
  <version>0.1.0</version>
  <description>The arm_description package</description>

  <author email="jimy92@163.com">Jimy Zhang</author>
  <maintainer email="jimy92@163.com">Jimy Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
