<?xml version="1.0"?>
<package format="2">
  <name>utra_api</name>
  <version>0.0.0</version>
  <description>The utra_api package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="johnson@umbratek.com">hsp</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>