<?xml version="1.0"?>
<package format="2">
  <name>utra_controller</name>
  <version>0.0.0</version>
  <description>The utra_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="johnson@umbratek.com">hsp</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>utra_api</depend>

  <build_depend>combined_robot_hw</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_simple_controller_manager</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>utra_msg</build_depend>
  
  
  <build_export_depend>combined_robot_hw</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>moveit_simple_controller_manager</build_export_depend>
  <build_export_depend>joint_state_publisher_gui</build_export_depend>
  <build_export_depend>utra_msg</build_export_depend>

  <exec_depend>combined_robot_hw</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>utra_msg</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>