<?xml version="1.0"?>
<package format="2">
  <name>utra_gripper</name>
  <version>0.1.0</version>
  <description>The utra_gripper package</description>

  <author email="jimy92@163.com">Jimy Zhang</author>
  <maintainer email="jimy92@163.com">Jimy Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>moveit_simple_controller_manager</build_depend>
  <build_export_depend>moveit_simple_controller_manager</build_export_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <build_depend>controller_manager</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <export>
  </export>
</package>
